# ChangeLog for net-p2p/frostwire
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/frostwire/ChangeLog,v 1.3 2008/03/26 00:03:40 wltjr Exp $

  26 Mar 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  frostwire-4.13.5.ebuild:
  Added EAPI=1, slot to jgoodies-looks dep to fix bug #214810, and added
  missing empty IUSE

  25 Mar 2008; William L. Thomson Jr. <wltjr@gentoo.org> metadata.xml:
  Added myself as maintainer

*frostwire-4.13.5 (25 Mar 2008)

  25 Mar 2008; William L. Thomson Jr. <wltjr@gentoo.org> +metadata.xml,
  +frostwire-4.13.5.ebuild:
  Initial ebuild for Frostwire, fork of Limewire. Based on ebuild from
  java-experimental overlay and limewire ebuilds. It's buggy and still needs
  work. Adding to tree for exposure and to mirror sources for upstream.
